--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 VPN/cloud-bastion-password
 secrets/key.json
+secrets/terraform-key.json
 packer/variables.json
 packer/files/reddit-full-variables.json
+
+*.tfstate
+*.tfstate.*.backup
+*.tfstate.backup
+*.tfvars
+.terraform/
