--- a/ansible/packer_app.yml
+++ b/ansible/packer_app.yml
@@ -1,5 +1,6 @@
 ---
 - name: Install ruby
+  hosts: default
   become: true
   tasks:
     - name: Apt install ruby
@@ -10,3 +11,7 @@
           - build-essential
         state: present
         update_cache: yes
+      register: result
+      until: result is not failed
+      retries: 5
+      delay: 5
