--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,10 +1,12 @@
 [defaults]
-# inventory = ./inventory.sh
 inventory = ./inventory
+# inventory = ./inventory.sh
+# inventory = ./yc.yml
 remote_user = ubuntu
 private_key_file = ~/.ssh/appuser
 host_key_checking = False
 retry_files_enabled = False
 
-# [inventory]
-# enable_plugins = script
+[inventory]
+enable_plugins = script
+# enable_plugins = yc_compute
