--- a/ansible/app.yml
+++ b/ansible/app.yml
@@ -3,7 +3,7 @@
   hosts: app
   become: true
   vars:
-    db_host: 10.128.0.34
+    db_host:  "{{ hostvars[inventory_hostname]['db']['internal_ip'] }}"
   tasks:
     - name: Add unit file for Puma
       copy:
