--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
-inventory = ./inventory
-# inventory = ./inventory.sh
+# inventory = ./inventory
+inventory = ./inventory.sh
 # inventory = ./yc.yml
 remote_user = ubuntu
 private_key_file = ~/.ssh/appuser
