--- a/ansible/playbooks/app.yml
+++ b/ansible/playbooks/app.yml
@@ -3,9 +3,6 @@
   hosts: app
   become: true
 
-#todo remove
-#  vars:
-#    db_host:  "{{ hostvars[inventory_hostname]['db']['internal_ip'] }}"
-
   roles:
     - app
+    - jdauphant.nginx
