--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -9,6 +9,8 @@ retry_files_enabled = False
 # # Явно укажем расположение ролей (можно задать несколько путей через ; )
 roles_path = ./roles
 
+vault_password_file = ~/.ansible/vault.key
+
 [diff]
 # Включим обязательный вывод diff при наличии изменений и вывод 5 строк контекста
 always = True
