--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,11 @@ packer/files/reddit-full-variables.json
 *.retry
 
 ansible/roles/jdauphant.nginx
+
+# Vagrant & molecule
+.vagrant/
+*.log
+*.pyc
+.molecule
+.cache
+.pytest_cache
