--- a/ansible/Vagrantfile
+++ b/ansible/Vagrantfile
@@ -1,7 +1,8 @@
 Vagrant.configure("2") do |config|
 
   config.vm.provider :virtualbox do |v|
-    v.memory = 512
+    # Increase memory for command "bundle install"
+    v.memory = 2048
   end
 
   config.vm.define "dbserver" do |db|
