--- a/ansible/playbooks/packer_app.yml
+++ b/ansible/playbooks/packer_app.yml
@@ -2,16 +2,6 @@
 - name: Install ruby
   hosts: default
   become: true
-  tasks:
-    - name: Apt install ruby
-      apt:
-        name:
-          - ruby-full
-          - ruby-bundler
-          - build-essential
-        state: present
-        update_cache: yes
-      register: result
-      until: result is not failed
-      retries: 5
-      delay: 5
+
+  roles:
+    - app
