--- a/ansible/Vagrantfile
+++ b/ansible/Vagrantfile
@@ -31,8 +31,12 @@ Vagrant.configure("2") do |config|
       "app:vars" => { "db_host" => "10.10.10.10"}
       }
       ansible.extra_vars = {
-       "deploy_user" => "ubuntu"
+       "deploy_user" => "ubuntu",
+       "nginx_sites" => {"default" => ['listen 80', 'server_name "reddit"', 'location / { proxy_pass http://127.0.0.1:9292; }']}
       }
+
+      #for debugging
+      #ansible.raw_arguments  = ["-vvv"]
     end
   end
 end
