--- a/ansible/environments/stage/requirements.yml
+++ b/ansible/environments/stage/requirements.yml
@@ -1,2 +1,7 @@
 - src: jdauphant.nginx
   version: v2.21.1
+
+#- name: db
+#  src: ssh://git@github.com/snirin/otus_devops_ansible_db_role.git
+#  version: main
+#  scm: git
